--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
         
         <link rel="stylesheet" href="index.css">
-        <script src="index.js"></script>  
+        <script src="index.js"></script>
     </head>
     <body bgcolor='grey'>
     <div id='canvasContainer'>
         <canvas id='myCanvas'></canvas>
     </div>
-    <div id='scoreContainer'><button id='showScoreboard'>Scoreboard</button>Level: <label id='levelValue'>1</label> Score: <label id='scoreValue'>0</label></div>
+    <div id='scoreContainer'><button id='showScoreboard'>Scoreboard</button>Lvl: <label id='levelValue'>?</label> Score: <label id='scoreValue'>?</label>/<label id='nextLevelValue'>?</label></div>
     
     <table id='bottomPanel'>
         <tr><td>
