--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
      <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css">
 
-        <script src="https://rawgit.com/bureyburey/Scoreboard-Module/master/scoreboard.js"></script>
+        <script src="https://cdn.rawgit.com/bureyburey/Scoreboard-Module/master/scoreboard.js"></script>
         <!-- Press+Start+2P font -->
         <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
         
